# Generative-methods

./: noise-exercise.ipynb
week2/: environment.yml  wfc_exercise.py
week3/gcg_stud/: CMakeLists.txt  README.md
week3/gcg_stud/bin.mac/: implicits  pool_scene
week3/gcg_stud/data/: cow.mtl  portal.mtl
week3/gcg_stud/data/cottage_obj/: cottage.mtl
week3/gcg_stud/exercises/Implicits/: GBufferLight.cpp  GBufferLight.h  implicits.cpp
week3/gcg_stud/exercises/PoolScene/: PoolScene.cpp
week3/gcg_stud/libGCG/CGLA/: Vec4f.h  gel_rand.cpp
week3/gcg_stud/libGCG/GLGraphics/: GLHeader.cpp  GLHeader.h  ShaderProgram.cpp  ShaderProgram.h  ThreeDObject.cpp  ThreeDObject.h  User.h  read_text_file.cpp  read_text_file.h
week3/gcg_stud/libGCG/Mesh/: ObjLoader.cpp  ObjLoader.h  Texmap.cpp  Texmap.h  TriangleMesh.cpp  TriangleMesh.h
week3/gcg_stud/libGCG/SOIL/: image_dxt.c  soil.c  stb_image_aug.c
week3/gcg_stud/shaders/Implicits/: object.frag  object.vert  object_back_face.frag  object_back_face.vert
week3/gcg_stud/shaders/PoolScene/: fish.frag  fish.vert  fluid_solver.frag  particles.frag  particles.geom  particles.vert  render_water.frag  render_water.vert  room.frag  swap_and_splash.frag  update_fish.frag
week5/Ex_Neural_Implicit_Surfaces/: Neural_Implicit_Surfaces_Exercise.ipynb  images_to_gif.py  utils.py
week5/__MACOSX/Ex_Neural_Implicit_Surfaces/: ._Neural_Implicit_Surfaces_Exercise.ipynb  ._pretrained_model.pt
week6/: lsys_ex.py
week7/: particles_exercise.blend
